--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -4,18 +4,12 @@ on: [push, workflow_dispatch]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        go-version:
-          - "1.15"
-          - "1.16"
-          - "1.17"
-          - "1.18"
-          - "1.19"
-          - "1.20"
-          - "1.21"
+        runs-on: [ubuntu-latest, macos-14]
+        go-version: ["1.15", "1.16", "1.17", "1.18", "1.19", "1.20", "1.21"]
+    runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v4
